2.0 release

	* update userdata in add_torrent_params to be type-safe and add to torrent_handle
	* add ip_filter to session_params
	* added support for wolfSSL for SHA-1 hash and HTTPS (no Torrents over SSL)
	* requires OpenSSL minimum version 1.0.0 with SNI support
	* deprecated save_state() and load_state() on session in favour of new
	  write_session_params() and read_session_params()
	* added support for BitTorrent v2 (see docs/upgrade_to_2.0.html)
	* create_torrent() pad_file_limit parameter removed
	* create_torrent() merkle- and optimize-alignment flags removed
	* merkle_tree removed from add_torrent_params
	* announce_entry expose information per v1 and v2 info-hash announces
	* torrent_removed_alert, torrent_deleted_alert, torrent_delete_failed_alert: info_hash member is no longer a sha-1 hash, but (deprecated) implicitly convertible to one
	* undeprecate error_file_metadata for torrent errors related to its metadata
	* remove support for adding a torrent under a UUID (used for previous RSS support)
	* remove deprecated feature to add torrents by file:// URL
	* remove deprecated feature to download .torrent file from URL
	* requires boost >= 1.66 to build
	* update networking API to networking TS compatible boost.asio
	* overhauled disk I/O subsystem to use memory mapped files (where available)
	* libtorrent now requires C++14 to build

1.2.4 release

	* fix binding TCP and UDP sockets to the same port, when specifying port 0
	* fix announce_to_all_trackers and announce_to_all_tiers behavior
	* fix suggest_read_cache setting
	* back-off tracker hostname looksups resulting in NXDOMAIN
	* lower SOCKS5 UDP keepalive timeout
	* fix external IP voting for multi-homed DHT nodes
	* deprecate broadcast_lsd setting. Just use multicast
	* deprecate upnp_ignore_nonrouters setting
	* don't attempt sending event=stopped if event=start never succeeded
	* make sure &key= stays consistent between different source IPs (as mandated by BEP7)